Done with react course

--- a/07OwnApp/.env
+++ b/07OwnApp/.env
@@ -3,3 +3,4 @@ VITE_APPWRITE_PROJECT_ID="65ef115d9a5372f5ab92"
 VITE_APPWRITE_DATABASE_ID="65ef131ad61afd46d2ae"
 VITE_APPWRITE_COLLECTION_ID="65ef1334a46aab6f2fce"
 VITE_APPWRITE_BUCKET_ID="65ef14b9c4e48495991f"
+VITE_TINYMCE_API_KEY="6w565lfkjvq9btqtwpzfbzj3136fleqbrc2ypnv53hpwtt43"
